Fix footer spacing and svg overflow on mobile

--- a/themes/timetree/assets/scss/components/_footer.scss
+++ b/themes/timetree/assets/scss/components/_footer.scss
@@ -1,4 +1,4 @@
-$mobile_footer_height: 500px;
+$mobile_footer_height: auto; // 500px;
 $desktop_footer_height: 106px;
 // access and copyright info below the main navigational footer
 $desktop_accessrights_height: 66px;
@@ -8,7 +8,8 @@ body > footer {
   position: relative;
   overflow: hidden; // hide svg roots if they overflow
 
-  padding: 16px 60px 30px;
+  // apply margins/padding to containers,
+  // because roots svg needs to be full width
 
   @include for-desktop-up {
     // height: $desktop_footer_height;
@@ -36,12 +37,15 @@ body > footer {
     flex-direction: column;
     gap: 8px;
 
+    margin: 29px 95px 48px;
+
     // limit footer nav width on larger screens
     @include for-desktop-up {
       flex-direction: row;
       width: 100%;
       max-width: 100%;
       gap: auto;
+      margin: 0;
     }
 
     > * {
@@ -98,7 +102,11 @@ body > footer {
   svg {
     grid-area: nav;
     pointer-events: none;
-    overflow: hidden;
+
+    @include for-mobile {
+      position: absolute;
+      top: 0;
+    }
 
     @include for-desktop-up {
       position: relative;
@@ -115,7 +123,7 @@ body > footer {
     align-items: center;
     padding: 0px;
     gap: 20px;
-    margin: 48px auto 0;
+    margin: 0 auto 30px;
     width: 206px;
 
     @include for-desktop-up {
@@ -161,6 +169,7 @@ body > footer {
   align-items: center;
   padding: 8px 0 18px;
   gap: 8px;
+  background-color: $nav-bg-color;
 
   width: 100vw;
   border-top: 1px solid $offwhite;
